fixed overflow

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -155,8 +155,6 @@ footer i {
     }
     .hello h1{
         font-size: 2.1em;
-    }
-    .hello h1.letters{
         word-wrap: break-word;
     }
     .rules{
